--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="contact-form-container">
         <h2>Contact Us</h2>
-        <form id="contactForm" action="contact.php" method="post">
+        <form id="contactForm" action="https://email.eluedamakeup.com/email/contact.php" method="post">
             <div class="form-row">
                 <div class="form-group">
                     <label for="firstName">First Name</label>
