--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 				<!-- form starting -->
 				<form class="form-horizontal" method="post"
-					action="contact.php">
+					action="https://email.eluedamakeup.com/email/contact.php">
 					<div class="form-group">
 						<div class="col-sm-12">
 							<!-- name -->
